syntax = "proto3";

option go_package = ".;proto";

package proto;

import "common.proto";
import "google/api/annotations.proto";

service ArticleService {
  rpc GetArticleList(GetArticleRequest) returns(GetArticleResponse) {
    option (google.api.http) = {
      get: "/v1/get_article_list"
    };
  }
}

message GetArticleRequest {
  int32 page = 1;
  int32 size = 2;
}

message Article {
  int32 id = 1;
  string title = 2;
}

message GetArticleResponse {
  repeated Article list = 1;
  Pager pager = 2;
}